--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       <div class="card">
         <div class="container-img">
-          <img class="image" src="../../wonderwoman.jpg" alt="Wonder woman">
+          <img class="image" src="media/wonderwoman.jpg" alt="Wonder woman">
           <div class="overlay">
             <h2 class="titleModal">Wonder Woman - Official Trailer</h2>
             <h4 class="textModal">Music by 2WEI.</h4>
