--- a/index.html
+++ b/index.html
@@ -13,89 +13,79 @@
 
   <header>
 
-    <div class="logo">
-      <a href="#"><img src="media/logo.jpg" alt="logo"></a>
-    </div>
-    <div class="links">
-      <ul>
-        <li><a href="https://www.youtube.com/channel/UCotdjDQV_MX5nUvrkkAlbbQ" target="_blank"><img src="media/youtube.png" onmouseover="this.src='media/youtube2.png'" onmouseout="this.src='media/youtube.png'" alt="Youtube"></a></li>
-        <li><a href="https://www.amazon.fr/s?k=2WEI&i=digital-music&search-type=ss&ref=ntt_srch_drd_B06ZZKGDGH" target="_blank"><img src="media/amazon.jpg" onmouseover="this.src='media/amazon2.jpg'" onmouseout="this.src='media/amazon.jpg'" alt="Amazon"></a></li>
-        <li><a href="https://www.facebook.com/2WEIMUSIC/" target="_blank"><img src="media/facebook.png" onmouseover="this.src='media/facebook2.png'" onmouseout="this.src='media/facebook.png'" alt="facebook"></a></li>
-      </ul>
-    </div>
-
+    <nav>
+      <div class="logo">
+        <a href="#"><img src="media/logo.jpg" alt="2wei logo"></a>
+      </div>
+      <div class="links">
+        <ul>
+          <li><a href="https://www.youtube.com/channel/UCotdjDQV_MX5nUvrkkAlbbQ" target="_blank"><img src="media/youtube.png" onmouseover="this.src='media/youtube2.png'" onmouseout="this.src='media/youtube.png'" alt="Youtube"></a></li>
+          <li><a href="https://www.amazon.fr/s?k=2WEI&i=digital-music&search-type=ss&ref=ntt_srch_drd_B06ZZKGDGH" target="_blank"><img src="media/amazon.jpg" onmouseover="this.src='media/amazon2.jpg'" onmouseout="this.src='media/amazon.jpg'" alt="Amazon"></a></li>
+          <li><a href="https://www.facebook.com/2WEIMUSIC/" target="_blank"><img src="media/facebook.png" onmouseover="this.src='media/facebook2.png'" onmouseout="this.src='media/facebook.png'" alt="facebook"></a></li>
+        </ul>
+      </div>
+    </nav>
+    
   </header>
   
   <!--BLOCKS-->
 
   <main>
 
-    <div class="containerBlock">
+    <div class="container">
 
-      <div class="card">
-        <div class="container-img">
-          <img class="image" src="media/wonderwoman.jpg" alt="Wonder woman">
-          <div class="overlay">
-            <h2 class="titleModal">Wonder Woman - Official Trailer</h2>
-            <h4 class="textModal">Music by 2WEI.</h4>
-          </div>
+      <div class="container-card">
+        <img class="image" src="media/wonderwoman.jpg" alt="Wonder woman">
+        <div class="overlay">
+          <h2 class="titleModal">Wonder Woman - Official Trailer</h2>
+          <h4 class="textModal">Music by 2WEI.</h4>
         </div>
       </div>
 
-      <div class="card">
-        <div class="container-img">
-          <img class="image" src="media/hellboy.png" alt="Hellboy">
-          <div class="overlay">
-            <h2 class="titleModal">Hellboy - Trailer #2</h2>
-            <h4 class="textModal">Arrangement by 2WEI. Song by Deep Purple.</h4>
-          </div>
+      <div class="container-card">
+        <img class="image" src="media/hellboy.png" alt="Hellboy">
+        <div class="overlay">
+          <h2 class="titleModal">Hellboy - Trailer #2</h2>
+          <h4 class="textModal">Arrangement by 2WEI. Song by Deep Purple.</h4>
         </div>
       </div>
 
-      <div class="card">
-        <div class="container-img">
-          <img class="image" src="media/tombraider.png" alt="Tomb Raider">
-          <div class="overlay">
-            <h2 class="titleModal">TOMB RAIDER - Official Trailer #2</h2>
-            <h4 class="textModal">Original by Destiny's Child, Arrangement & Cover by 2WEI.</h4>
-          </div>
+      <div class="container-card">
+        <img class="image" src="media/tombraider.png" alt="Tomb Raider">
+        <div class="overlay">
+          <h2 class="titleModal">TOMB RAIDER - Official Trailer #2</h2>
+          <h4 class="textModal">Original by Destiny's Child, Arrangement & Cover by 2WEI.</h4>
         </div>
       </div>
 
-      <div class="card">
-        <div class="container-img">
-          <img class="image" src="media/battlefield.jpg" alt="Battlefield">
-          <div class="overlay">
-            <h2 class="titleModal">Battlefield V - Firestorm Trailer</h2>
-            <h4 class="textModal">Cover by 2WEI. Client: EA.</h4>
-          </div>
+      <div class="container-card">
+        <img class="image" src="media/battlefield.jpg" alt="Battlefield">
+        <div class="overlay">
+          <h2 class="titleModal">Battlefield V - Firestorm Trailer</h2>
+          <h4 class="textModal">Cover by 2WEI. Client: EA.</h4>
         </div>
       </div>
 
-      <div class="card">
-        <div class="container-img">
-          <img class="image" src="media/adidas.png" alt="Adidas">
-          <div class="overlay">
-            <h2 class="titleModal">ADIDAS - Run to rise</h2>
-            <h4 class="textModal">Music by 2WEI.</h4>
-          </div>
+      <div class="container-card">
+        <img class="image" src="media/adidas.png" alt="Adidas">
+        <div class="overlay">
+          <h2 class="titleModal">ADIDAS - Run to rise</h2>
+          <h4 class="textModal">Music by 2WEI.</h4>
         </div>
       </div>
 
-      <div class="card">
-        <div class="container-img">
-          <img class="image" src="media/tolkien.png" alt="Tolkien">
-          <div class="overlay">
-            <h2 class="titleModal">Tolkien - Trailer #2</h2>
-            <h4 class="textModal">Music by 2WEI.</h4>
-          </div>
+      <div class="container-card">
+        <img class="image" src="media/tolkien.png" alt="Tolkien">
+        <div class="overlay">
+          <h2 class="titleModal">Tolkien - Trailer #2</h2>
+          <h4 class="textModal">Music by 2WEI.</h4>
         </div>
       </div>
 
     </div>
 
 <!--MODAL-->
-<!--
+
     <div class="containerModal">
       <div class="modal">
         <span class="closeModal">&times;</span>
@@ -105,14 +95,7 @@
         <button class="control" onclick="stopSong()">Stop</button>
       </div>
     </div>
--->
   </main>
-
-<!--FOOTER-->
-
-  <footer>
-
-  </footer>
 
   <script src="app.js"></script>
 </body>
